--- a/src/client/cardwidget.ui
+++ b/src/client/cardwidget.ui
@@ -32,9 +32,12 @@
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::MinimumExpanding</enum>
+     </property>
      <property name="sizeHint" stdset="0">
       <size>
-       <width>10</width>
+       <width>20</width>
        <height>20</height>
       </size>
      </property>
@@ -71,9 +74,12 @@
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::MinimumExpanding</enum>
+     </property>
      <property name="sizeHint" stdset="0">
       <size>
-       <width>10</width>
+       <width>20</width>
        <height>20</height>
       </size>
      </property>
